# CMake

./: CMakeLists.txt  CMakePresets.json  README.md  cmake_preconfig.cmake  fetch_presets.cmake  install-cmake.sh  uninstall-cmake.sh
cmake/: cmake-config.cmake.in
conan2/: install.py
conan2/profiles/: clang  gcc  linux-arm64-clang-make  linux-arm64-gcc-make  linux-arm64-gcc-ninja  linux-x86_64-gcc-make
config/: cmake-config.cmake.in
modules/: FunctionsCMake.cmake  IncludeGoogleTests.cmake  UtilsC.cmake  UtilsCMake.cmake  UtilsCXX.cmake  Variables.cmake  VariablesC.cmake  VariablesCMake.cmake  VariablesCXX.cmake
presets/: cmake-version.json  default.json  make.json  ninja.json  visual-studio.json
scripts/: cmake_uninstall.cmake
toolchains/: linux-arm32-clang.cmake  linux-arm32-gcc.cmake  linux-arm64-clang.cmake  linux-arm64-gcc.cmake  linux-x86_64-clang.cmake  linux-x86_64-gcc.cmake
variables/: variables.cmake
